# depsec

./: .gitignore  .gitleaksignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  SKILL.md  action.yml  deny.toml  depsec.baseline.json  depsec.toml  install.sh
.depsec/: scan-cache.json
.github/workflows/: ci.yml  release.yml
coverage/: tarpaulin-report.html
docs/brainstorms/: 2026-03-28-layer1-smart-filtering.md  2026-03-28-layer2-llm-triage.md  2026-03-28-layer3-deep-audit.md  2026-03-28-smart-analysis-brainstorm.md  2026-03-30-vibe-coder-output-brainstorm.md  2026-03-31-behavioral-layering-brainstorm.md  2026-03-31-build-time-protection-brainstorm.md  2026-03-31-capability-analysis-brainstorm.md  2026-03-31-cli-simplification-brainstorm.md  2026-03-31-executive-summary-default-brainstorm.md  2026-03-31-llm-integration-brainstorm.md  2026-03-31-smart-secret-detection-brainstorm.md  2026-03-31-wire-everything-brainstorm.md  2026-03-31-zero-day-detection-brainstorm.md  2026-04-01-honeypot-sandbox-architecture.md  2026-04-02-detection-improvement-roadmap-brainstorm.md  2026-04-02-hornets-nest-brainstorm.md  2026-04-03-definitive-protect-mode-brainstorm.md  (+1 more)
scripts/: benchmark.sh
src/: attestation.rs  audit.rs  baseline.rs  canary.rs  config.rs  evidence.rs  fixer.rs  install_guard.rs  llm.rs  main.rs  monitor.rs  output.rs  preflight.rs  reachability.rs  rules.rs  sandbox.rs  sarif.rs  scan_cache.rs  scanner.rs  scorecard.rs  scoring.rs  secrets_ast.rs  selfcheck.rs  shellhook.rs  spinner.rs  triage.rs  triage_cache.rs  tui.rs  utils.rs  watchdog.rs
(+66 files in other folders)
