[package]
name = "depsec"
version = "0.4.0"
edition = "2021"
description = "Supply chain security scanner for any GitHub project"
license = "MIT"
repository = "https://github.com/chocksy/depsec"
readme = "README.md"
keywords = ["security", "supply-chain", "scanner", "dependencies", "audit"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["artifacts/", "docs/", "design-*.svg"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
walkdir = "2"
streaming-iterator = "0.1"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
